# infoburn

./: .gitignore  debug_burns_patient_response.ipynb  main.py  pyproject.toml
.github/: copilot-instructions.md
backend/: __init__.py
backend/app/: database.py  dependencies.py  main.py
core_tools/: diagnosis.py  key_manager.py  menu.py  snomedct.py
documentation/: PT-glossario.md  project.md  pydantic-v2-documentation.md
google_sheet_tools/: config_gsheet.py  csv_typer.py  gsheet_manager.py
json_saver/: admission_data.py
markdown_anonymizer/: cli.py  config.py  markdown_anonymizer.py  simple_anonymizer.py
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pdf_parser_markdown/: markdown_cleaner.py  pdf_parser.py
pydantic_classifier/: admission_data_model.py  burns_model.py  case.py  medical_history.py  models_gsheet.py
pydantic_extracter/: burnsExt_gemini_batch.py  burns_extracter.py  burns_extracter_gemini_genai.py  case_extracter.py  genai_client.py  medical_history_extractor.py  medication_extractor.py  rate_limiter.py
quality_control_tools/: base.py  data_alta.py  data_ent.py  data_nasc.py  id.py  main_quality.py  origem_destino.py  processo.py
reports/: import_summary_20250401_141939.html  import_summary_20250401_142605.html  import_tracking.csv
scripts/: import_burns_data.py  link_admissions_to_burns.py  link_collections.py  test_db_connection.py
tests/: data_export.py  mongodb_query_test.py  test_burns_responses.py  test_document_reference_manager.py
(+37 files in other folders)
