[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infoburn"
version = "0.1.0"
description = "Burns Critical Care Unit Information System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-api-python-client>=2.166.0",
    "gspread>=6.2.0",
    "ipykernel>=6.29.5",
    "logfire>=3.12.0",
    "motor>=3.7.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "backend"
]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
]
